--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
-div{
-    width: 700px;
-    height: 400;
-    background-color:lightblue;
-
-
- 
+.header-1{
+     color: red ;
+     background-color: black;
 }
-
+.header-2{
+    color: green;
+    background-color: black;
+}
+.header-3{
+    color: yellowgreen;
+    background-color: black;
+}
+.header-4{
+    color: orange;
+    background-color: black;
+}
+.header-5{
+    color: pink;
+    background-color: black;
+}
