--- a/style.css
+++ b/style.css
@@ -1,20 +1,28 @@
-.header-1{
-     color: red ;
-     background-color: black;
+
+div:nth-child(1){
+    background-color: aquamarine;
+    width: 100%;
+    height: 50px;
+    position:fixed;
+    top: 0;
+    text-align: center;
+    line-height: 50px;
+
+   
 }
-.header-2{
-    color: green;
-    background-color: black;
+
+div:nth-child(2){
+    background-color: rgb(197, 148, 207);
+    width: 50px;
+    height: 50px;
+    margin-top: 80px;
+    
 }
-.header-3{
-    color: yellowgreen;
-    background-color: black;
-}
-.header-4{
-    color: orange;
-    background-color: black;
-}
-.header-5{
-    color: pink;
-    background-color: black;
+
+
+div:nth-child(3){
+    background-color: rgb(197, 179, 77);
+    width: 50px;
+    height: 50px;
+
 }
