--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body{
     margin:15px;
+    color: red;
 }
 h1 {
-    color:red;
+    margin: 0;
+    color:rgb(219, 223, 13);
 }
 header{
     background-color: black;
 }
 div{
-    width: 50000%;
+    width: 50%;
     height: 300px;
     background-color: pink;
     border: 3px solid black;
