--- a/style.css
+++ b/style.css
@@ -1,28 +1,24 @@
+body{
+    margin: 0;
+}
+h1{
+    margin: 0;
+}
 
-div:nth-child(1){
-    background-color: aquamarine;
-    width: 100%;
-    height: 50px;
-    position:fixed;
-    top: 0;
+.container{
+    background-color: rgb(64, 149, 219);
+    height: 400px;
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.one,.two,.three{
+    flex: 1;
+    background-color: orange;
+    border: 1px solid white;
     text-align: center;
-    line-height: 50px;
-
-   
+    padding: 5px;
 }
 
-div:nth-child(2){
-    background-color: rgb(197, 148, 207);
-    width: 50px;
-    height: 50px;
-    margin-top: 80px;
-    
-}
-
-
-div:nth-child(3){
-    background-color: rgb(197, 179, 77);
-    width: 50px;
-    height: 50px;
-
-}
