--- a/style.css
+++ b/style.css
@@ -1,25 +1,11 @@
-body{
-    margin: 0;
-    background-color: rgb(4, 224, 188);
+.section-1{
+    width: 50pz;
+    height: 500px;
+    background-color:rgb(54, 47, 34);
+} 
 
-}
-div{
-    width:200px;
-    height: 200px;
-    margin:5px;
-    background-color:rgb(238, 13, 13);
-    animation: expand 1s ease-out 1s infinite ;
-}
-div:hover{
-    animation-play-state: paused;
-}
-@keyframes expand{
-    from{
-        width: 200px;
-    }
-    to{
-      width: 600px;
-    
+@media screen and (max-width:400px){
+    .section-1{
+        background-color: black;
     }
 }
-
