--- a/style.css
+++ b/style.css
@@ -1,47 +1,12 @@
-*{
-    box-sizing: border-box;
-}
 body{
-    margin: 0;
-
+    font-family:Arial, Helvetica, sans-serif;
 }
 
-.container{
-    display: flex;
-    flex-wrap: wrap;
+h1 {
+    color: rgb(6, 161, 110);
 }
 
-.section{
-    flex: 25%;
-    padding: 0 5px;
-
+h1["section-1"] {
+    color: rgb(131, 4, 4);
 }
-img{
-    width: 100%;
-    margin: 1 px 0;
-    transform: scale(0.8);
-    transition: 1s ease-in-out;
-}
-
-img:hover {
-    transform: scale(1) rotateX(45deg);
-}
-
-@media (max-width:991px){
-    .section{
-        flex: calc(100% / 3);
-    }
-}
-
-@media (max-width:767px){
-    .section{
-        flex: 50%;
-    }
-}
-@media (max-width:567px){
-    .section{
-        flex: 100%;
-    }
-}
-
 
