--- a/style.css
+++ b/style.css
@@ -1,30 +1,7 @@
-body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(13, 212, 212);
-}
-.section-1{
-   border: 4px solid red;
-   height:50px;
-   fo
-
-}
-p2{
-    border: 3px solid orange;   
-}
-.section-2{
-    border: 5px solid blue;
-    height:310px;
+div{
+    background-color: rgb(212, 60, 60);
+    width:130px;
+    height: 100px;
+    text-align: center;
     
-}
-span{
-    border: 4px solid rgb(68, 13, 158);
-}
-.my image{
-    width: 50px;
-    height:40px;
-    border-radius: 8px;
-}
-.section-3{
-    border: 5px solid blue;
-    height: 350px;
 }
