--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    padding-top:80px;
 
 }
 .heading-2{
@@ -65,29 +66,68 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    padding-top: 80px;
 }
 .heading-3{
     width: 100%;
     height: 100%;
-    background-color: rgb(13, 233, 214);
+    background-color: rgb(241, 114, 235);
     text-align: center;
     justify-content: center;
     align-items: center;
+    padding-top: 80px;
 }
 .content-sec-1{
     display: flex;
+    width:100%;
+    height:500px;  
+    
 }
 
-.heading-4{
-    width: 80%;
-    height: 500px;
-    background-color: #4bf383;
+.head-4-div{
+  width: 100%;
+  background-color: #59dab3;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 225px;
+  
+}
+.head-5-div{
+    background-color: #5d6610;
+    width:20% ;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding-top:250px;
+    padding-top: 225px;
 }
-.heading-5{
-    background: #857806;
-    width: 10%;
+.footer-1{
+    background: #2386d6;
+    width: 100%;
+    height:80px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25px;
+}
+
+
+.test{
+    height:100px;
+    width: 100px;
+    background: #ffffff;
+    margin-top: 50px;
+    /* margin-bottom: 25px; */
+    border-top: 20px solid rgb(39, 71, 216);
+    border-left: 20px solid rgb(188, 223, 219);
+    border-right: 20px solid rgb(151, 197, 199);
+    border-bottom: 20px solid rgb(36, 77, 165);
+    text-align: center;
+    padding-top: 13px;
+    color: #2386d6;
+}
+.navbar-2{
+    display: flex;
+    height: 500px;
+    width: 100%;
 }
