--- a/style.css
+++ b/style.css
@@ -125,9 +125,33 @@
     text-align: center;
     padding-top: 13px;
     color: #2386d6;
+    font-size:20px ;
+    font-family: sans-serif;
 }
 .navbar-2{
     display: flex;
     height: 500px;
     width: 100%;
+}
+.div-logo{
+    width:100%;
+    background-color: #335ba7;
+    margin-top: 50px;
+    height:100px;
+    color: #fcfcfc;
+    padding-top: 30px;
+    font-size:20px;
+    font-family: sans-serif;
+    text-indent: 20px;
+}
+.div-logo-1{
+    background-color: #335ba7;
+    margin-top:50px;
+    height:100px;
+    color: #fcfcfc;
+    padding-top:30px;
+    font-size:20px;
+    font-family: sans-serif;
+    text-indent:10px;
+
 }
