--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 .logo-div h1{
     font-size: 35px;
-    padding-top: 30px;
+    padding-top: 20px;
     text-align: center;
 }
 
@@ -182,6 +182,18 @@
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    width:97%;
+    background: #f71302;
+    color: #e2eaec;
+    
+}
+
+
     
     
+
+.cource-content-2{
+    background: #9ace57;
+    width: 200px;
+
 }
