--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@
     
 }
 .navbar-2{
+    /* margin-top: 50px; */
     display: flex;
     height:150px;
     width: 100%;
@@ -177,23 +178,54 @@
 .content-main{
     height: 500px;
     background-color: #8c9197;  
+    padding: 10px;
+
 }
 .cource-content{
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    width:97%;
-    background: #f71302;
-    color: #e2eaec;
-    
+    background: #ffffff;
+    color: #923939;
+    height:500px;
+    font-family: sans-serif;
+    border-radius: 8px;
 }
 
-
+.cs-1{
+    height: 70px;
+    width: 100%;
+    border: 3px solid rgb(54, 54, 153);
+    margin: 5px;
+    border-radius: 8px;
+    display: flex;
+    color: black;
+    text-indent: 10px;
     
     
+}
+.cs-1 img{
+    margin:8px;
+    width: 50px;
+    height:50px;
 
-.cource-content-2{
-    background: #9ace57;
-    width: 200px;
+}
+.cs-2{
+    height: 70px;
+    width: 100%;
+    border: 3px solid rgb(54, 54, 153);
+    border-radius: 8px;
+    margin-left:5px;
 
+}
+
+.cs-2 img{
+    height: 70px;
+    width: 100%;
+    border: 3px solid rgb(54, 54, 153);
+    margin: 5px;
+    border-radius: 8px;
+    display: flex;
+    color: black;
+    text-indent: 10px; 
 }
