--- a/style.css
+++ b/style.css
@@ -1,36 +1,51 @@
+body{
+    height: 700px;
+}
+
+
 .parent{
     position:relative;
     
-    width:100px;
+    width:50px;
     padding:80px;
     background: #ff0404;
 }
 
 .child{
     position:absolute;
-    width:100px;
-    padding: 100px;
+    width:50px;
+    padding: 85px;
     background: #d38bcd;
-    top: 100px;
-    left: 120px;
+    top:0px;
+    right:0px ;
 
 }
 
 .child-2{
     position:absolute;
-    width:100px;
-    padding: 100px;
-    background: #d3bf08;
+    width:50px;
+    padding: 80px;
+    background:yellow;
     top: 200px;
-    left: 230px;
+    left: 550px;
+   
 
 }
 
 .child-3{
     position:absolute;
-    width:100px;
-    padding: 100px;
+    width:50px;
+    padding:80px;
     background: #127909;
-    left: 330px;
-    top: 50px;
+    right:0px;
+    bottom: 0px;
+}
+
+.child-4{
+    position:absolute;
+    width:100px;
+    padding:70px;
+    background: #4662e0;
+    left: 0px;
+    bottom:0px;
 }
