--- a/style.css
+++ b/style.css
@@ -1,51 +1,114 @@
 body{
-    height: 700px;
+    background: #e7d194;
+    border: 100px;
+    margin: 0%;
 }
 
+.navbar{
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    font-size:x-large;
+    /* margin: 0%; */
 
+    
+    
+}
 .parent{
     position:relative;
+    width:150px;
+    height:150px;
+    background:gray;
+    border:2px solid blue;
+    text-align: center;
     
-    width:50px;
-    padding:80px;
-    background: #ff0404;
 }
 
 .child{
     position:absolute;
-    width:50px;
-    padding: 85px;
-    background: #d38bcd;
-    top:0px;
-    right:0px ;
+    background:yellow;
+    border: 2px solid red;
+    text-align: center;
+    width:150px;
+    height: 150px;
+    top:287px;
+    left:156px;
 
+ 
 }
 
 .child-2{
     position:absolute;
-    width:50px;
-    padding: 80px;
-    background:yellow;
-    top: 200px;
-    left: 550px;
-   
+    background:white;
+    border: 2px solid #5ddfc9;
+    text-align: center;
+    width:150px;
+    height:150px;
+    left:313px;
+    top:443px;
 
+    
+  
 }
 
 .child-3{
     position:absolute;
-    width:50px;
-    padding:80px;
-    background: #127909;
-    right:0px;
-    bottom: 0px;
+    width:150px;
+    height:150px;
+    background: red;
+    border: 2px solid black;
+    text-align: center;
+    top:289px;
+    left:470px;
+
 }
 
 .child-4{
     position:absolute;
-    width:100px;
-    padding:70px;
-    background: #4662e0;
-    left: 0px;
-    bottom:0px;
+    width:150px;
+    height:150px;
+    background: green;
+    border: 2px solid #a4e7de;
+    text-align: center;
+    top: 135px;
+    left:625px;
+
+
+
+}
+
+.child-5{
+    position:absolute;
+    width:150px;
+    height:150px;
+    background: #2e23cf;
+    border: 2px solid #000000;
+    text-align: center;
+    left:780px;
+}
+
+.child-6{
+    position:absolute;
+    width:150px;
+    height:150px;
+    background: #2fceda;
+    border: 2px solid #218b38;
+    text-align: center;
+    top: 440px;
+    left:935px;
+}
+
+.child-7{
+    position:absolute;
+    width:150px;
+    height:150px;
+    background: #4be21d;
+    border: 2px solid #000000;
+    text-align: center;
+    top:287px;
+    left:1087px;
+}
+
+.child-8{
+    
 }
