--- a/style.css
+++ b/style.css
@@ -1,128 +1,37 @@
 body{
-    background: #e7d194;
-    border: 100px;
     margin: 0%;
-}
-
+} 
 .navbar{
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    font-size:x-large;
-    /* margin: 0%; */
-
-    
-    
-}
-.parent{
-    position:relative;
-    width:150px;
-    height:150px;
-    background:gray;
-    border:2px solid blue;
-    text-align: center;
-    
-}
-
-.child{
-    position:absolute;
-    background:yellow;
-    border: 2px solid red;
-    text-align: center;
-    width:150px;
-    height: 150px;
-    top:287px;
-    left:156px;
-
- 
-}
-
-.child-2{
-    position:absolute;
-    background:white;
-    border: 2px solid #5ddfc9;
-    text-align: center;
-    width:150px;
-    height:150px;
-    left:313px;
-    top:443px;
-
-    
+    height:80px;
+    background: #9e8383;
+    width:100%;
+    font-family:monospace;
+    justify-content: center;
+    font-size:17px;
+    padding:1px;
+   
   
-}
-
-.child-3{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: red;
-    border: 2px solid black;
-    text-align: center;
-    top:289px;
-    left:470px;
 
 }
 
-.child-4{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: green;
-    border: 2px solid #a4e7de;
-    text-align: center;
-    top: 135px;
-    left:625px;
+.menu-bar {
+    width: 30px;
+    height: 25px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    cursor:pointer;
+    
+    
+  }
+  
+  .menu-bar span {
+    display:block;
+    height: 4px;
+    background-color: #352929;
+    border-radius: 2px;
+    
+  }
 
 
-
-}
-
-.child-5{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: #2e23cf;
-    border: 2px solid #000000;
-    text-align: center;
-    left:780px;
-}
-
-.child-6{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: #2fceda;
-    border: 2px solid #218b38;
-    text-align: center;
-    top: 440px;
-    left:935px;
-}
-
-.child-7{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: #4be21d;
-    border: 2px solid #000000;
-    text-align: center;
-    top:287px;
-    left:1087px;
-}
-
-.child-8{
-    position:absolute;
-    width:150px;
-    height:150px;
-    background: #e737d0;
-    border: 2px solid #000000;
-    text-align: center;
-    top: 134px;
-    left: 1240px;
-}
-
-.footter{
-    height: 100px;
-    width: 100%;
-    background: #d8d7a8;
-    top:500px;
-}
+  
